IntegralLattice関連のファイルを追加．それに伴い内容も少し変更した．

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "4a303c25708d6c5f7c519684061d7149b7e05fd5",
+   "rev": "2b6e3d707757364f10504dedab0ffb33151a128e",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "master",
+   "inputRev": null,
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/plausible",
@@ -91,5 +91,5 @@
    "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.toml"}],
- "name": "Project",
+ "name": "blueprint_test",
  "lakeDir": ".lake"}
