xelatexに変更(ミスを修正)

--- a/lakefile.toml
+++ b/lakefile.toml
@@ -1,5 +1,5 @@
 name = "blueprint_test"
-defaultTargets = ["Project"]
+defaultTargets = ["NewProject"]
 
 [leanOptions]
 pp.unicode.fun = true
@@ -20,4 +20,4 @@ name = "«doc-gen4»"
 git = "https://github.com/leanprover/doc-gen4"
 rev = "main"
 [[lean_lib]]
-name = "Project"
+name = "NewProject"
